--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -11,10 +11,12 @@
     - DavidWittman.redis
     - williamyeh.oracle-java
     - nickp666.android-sdk
+    - martinmicunda.bower
   vars:
     java_version: 7
     android_sdk_download_location: http://dl.google.com/android/android-sdk_r24.1.2-linux.tgz
     android_sdk_install_location: /home/vagrant/android-sdk-linux
+    mongodb_conf_port: 27017
     android_sdk_dependency_packages:
       - "libncurses5" #libncurses5:i386
 #      - "libstdc++6" #libstdc++6:i386
